# libobs-recorder

./: .gitattributes  .gitignore  Cargo.toml  cleanup_headers.ps1  dll_to_lib.ps1  readme.md  rustfmt.toml
.run/: build [bindgen].run.xml  build extprocess_recorder.run.xml  clean.run.xml  move libobs files.run.xml  run example.run.xml
build-helper/: Cargo.toml
build-helper/libobs_30.1.1/data/libobs/: bicubic_scale.effect  default.effect
build-helper/libobs_30.1.1/data/obs-plugins/obs-ffmpeg/locale/: en-US.ini
build-helper/libobs_30.2.2/data/obs-plugins/win-capture/locale/: en-US.ini
build-helper/libobs_30.2.2/data/obs-plugins/win-wasapi/locale/: en-US.ini
build-helper/libobs_31.0.1/data/libobs/: area.effect  bilinear_lowres_scale.effect  color.effect  deinterlace_base.effect  deinterlace_blend.effect  deinterlace_blend_2x.effect  deinterlace_discard.effect  deinterlace_linear_2x.effect  deinterlace_yadif.effect  deinterlace_yadif_2x.effect  repeat.effect  solid.effect
build-helper/libobs_31.0.1/data/obs-plugins/obs-ffmpeg/locale/: en-US.ini
build-helper/libobs_31.0.1/data/obs-plugins/win-capture/locale/: en-US.ini
build-helper/libobs_31.0.2/data/libobs/: default_rect.effect  deinterlace_discard_2x.effect  deinterlace_linear.effect
build-helper/libobs_31.1.2/data/libobs/: default.effect  opaque.effect
build-helper/libobs_31.1.2/data/obs-plugins/coreaudio-encoder/locale/: en-US.ini
build-helper/libobs_31.1.2/data/obs-plugins/obs-ffmpeg/locale/: en-US.ini
build-helper/libobs_31.1.2/data/obs-plugins/obs-qsv11/locale/: en-US.ini
build-helper/libobs_31.1.2/data/obs-plugins/obs-x264/locale/: en-US.ini
build-helper/libobs_32.0.4/data/libobs/: color.effect  default.effect  format_conversion.effect  lanczos_scale.effect
build-helper/libobs_32.0.4/data/obs-plugins/obs-ffmpeg/locale/: en-US.ini
build-helper/libobs_32.0.4/obs-plugins/64bit/locales/: af.pak  am.pak  ar.pak  bg.pak  bn.pak  ca.pak  cs.pak  da.pak  de.pak  el.pak  en-GB.pak  en-US.pak  es-419.pak  es.pak  et.pak  fa.pak  fi.pak  fil.pak  fr.pak  gu.pak  he.pak  hi.pak  hr.pak  hu.pak  id.pak  it.pak  ja.pak  kn.pak  ko.pak  lt.pak  lv.pak  ml.pak  mr.pak  ms.pak  nb.pak  nl.pak  pl.pak  pt-BR.pak  pt-PT.pak  ro.pak  (+15 more)
build-helper/src/: lib.rs
demo/: Cargo.toml  build.rs
demo/src/: main.rs
examples/: record.rs  recorder.rs  test.rs
intprocess-recorder/: Cargo.toml
intprocess-recorder/src/: lib.rs
intprocess-recorder/src/recorder/: get.rs  mod.rs  obs_data.rs
intprocess-recorder/src/settings/: adapter.rs  audio.rs  encoders.rs  framerate.rs  mod.rs  rate_control.rs  resolution.rs  window.rs
ipc-link/: Cargo.toml
ipc-link/src/: lib.rs
libobs-sys/: .cargo_vcs_info.json  .gitignore  Cargo.toml  Cargo.toml.orig  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  obs.lib  obs_27.2.4.lib  obs_28.0.3.lib  obs_29.1.3.lib  obs_30.0.2.lib  obs_30.1.0.lib  obs_30.1.1.lib  obs_30.1.2.lib  obs_30.2.2.lib  obs_31.0.1.lib  obs_31.0.2.lib  obs_31.1.2.lib  obs_32.0.4.lib  wrapper.h
libobs-sys/libobs_headers/: git_commit  obs-audio-controls.h  obs-avc.h  obs-config.h  obs-data.h  obs-defs.h  obs-encoder.h  obs-ffmpeg-compat.h  obs-hevc.h  obs-hotkey.h  obs-hotkeys.h  obs-interaction.h  obs-internal.h  obs-missing-files.h  obs-module.h  obs-nal.h  obs-nix-platform.h  obs-nix-wayland.h  obs-nix-x11.h  obs-nix.h  obs-output.h  obs-properties.h  obs-scene.h  obs-service.h  obs-source.h  obs-ui.h  obs.h
libobs-sys/libobs_headers/audio-monitoring/osx/: mac-helpers.h
libobs-sys/libobs_headers/audio-monitoring/pulse/: pulseaudio-wrapper.h
libobs-sys/libobs_headers/audio-monitoring/win32/: wasapi-output.h
libobs-sys/libobs_headers/callback/: calldata.h  decl.h  proc.h  signal.h
libobs-sys/libobs_headers/graphics/: bounds.h  device-exports.h  effect-parser.h  effect.h  graphics-internal.h  graphics.h  half.h  image-file.h  input.h  math-defs.h  math-extra.h  matrix3.h  matrix4.h  plane.h  quat.h  shader-parser.h  srgb.h  vec2.h  vec3.h  vec4.h
libobs-sys/libobs_headers/graphics/libnsgif/: libnsgif.h
libobs-sys/libobs_headers/media-io/: audio-io.h  audio-resampler.h  format-conversion.h  frame-rate.h  media-io-defs.h  media-remux.h  video-frame.h  video-io.h  video-scaler.h
libobs-sys/libobs_headers/util/: array-serializer.h  base.h  bitstream.h  bmem.h  c99defs.h  cf-lexer.h  cf-parser.h  circlebuf.h  config-file.h  darray.h  dstr.h  file-serializer.h  lexer.h  pipe.h  platform.h  profiler.h  serializer.h  sse-intrin.h  task.h  text-lookup.h  threading-posix.h  threading-windows.h  threading.h  utf8.h  util_uint128.h  util_uint64.h
libobs-sys/libobs_headers/util/apple/: cfstring-utils.h
libobs-sys/libobs_headers/util/curl/: curl-helper.h
libobs-sys/libobs_headers/util/simde/: check.h  debug-trap.h  hedley.h  simde-align.h  simde-arch.h  simde-common.h  simde-constify.h  simde-detect-clang.h  simde-diagnostic.h  simde-features.h  simde-math.h
libobs-sys/libobs_headers/util/simde/x86/: mmx.h  sse.h  sse2.h
libobs-sys/libobs_headers/util/windows/: obfuscate.h  win-registry.h  win-version.h  window-helpers.h
libobs-sys/libobs_headers_30.1.0/util/: util_uint64.h
libobs-sys/libobs_headers_31.1.2/: obs-config.h
libobs-sys/src/: bindings.rs  bindings_27.2.4.rs  bindings_28.0.3.rs  bindings_28.1.1.rs  bindings_29.0.0.rs  bindings_29.1.3.rs  bindings_30.0.2.rs  bindings_30.1.0.rs  bindings_30.1.1.rs  bindings_30.1.2.rs  bindings_30.2.2.rs  bindings_31.0.1.rs  bindings_31.0.2.rs  bindings_31.1.2.rs  bindings_32.0.4.rs  lib.rs
src/: bitrate.rs  cqp.rs  encoder.rs  encoders.rs  framerate.rs  get.rs  lib.rs  main.rs  obs_data.rs  rate_control.rs  resolution.rs  settings.rs  window.rs
src/recorder/: get.rs  mod.rs  obs_data.rs
src/settings/: audio.rs  encoders.rs  framerate.rs  mod.rs  rate_control.rs  resolution.rs  window.rs
tests/: ipc_link.rs
