[package]
name = "libobs-recorder"
version = "2.0.0"
edition = "2021"
authors = ["FX"]
description = "Record a window or screen using libobs."
license = "GPL-2.0"

[workspace]
members = ["libobs-sys", "ipc-link", "intprocess-recorder", "build-helper"]

[workspace.dependencies]
libobs-sys = { path = "libobs-sys" }
ipc-link = { path = "ipc-link" }
intprocess-recorder = { path = "intprocess-recorder" }
build-helper = { path = "build-helper" }
bindgen = "0.69.1"
serde = { version = "1.0.171" }
serde_json = "1.0.100"
specta = "1.0.5"
wait-timeout = "0.2.0"
fs_extra = { version = "1.3.0" }
log = "0.4.20"

[lib]
name = "libobs_recorder"
path = "src/lib.rs"

[[bin]]
name = "extprocess_recorder"
path = "src/main.rs"

[dependencies]
intprocess-recorder = { workspace = true }
ipc-link = { workspace = true }
libobs-sys = { workspace = true }

[features]
bindgen = ["intprocess-recorder/bindgen"] # re-generates libobs-sys bindings
specta = ["intprocess-recorder/specta"]
