[workspace]
members = ["libobs-sys", "ipc-link", "intprocess-recorder", "build-helper"]
exclude = ["demo"]

[workspace.package]
edition = "2021"
authors = ["FX"]
license = "GPL-2.0"

[workspace.dependencies]
libobs-sys = { path = "libobs-sys" }
ipc-link = { path = "ipc-link" }
intprocess-recorder = { path = "intprocess-recorder" }
build-helper = { path = "build-helper" }

bindgen = "0.69.1"

serde = "1.0.171"
serde_json = "1.0.100"

specta = { version = "=2.0.0-rc.22", features = ["derive"] }

wait-timeout = "0.2.0"
fs_extra = "1.3.0"
const_format = "0.2.32"
log = "0.4.20"

[package]
name = "libobs-recorder"
version = "2.0.0"
description = "Record a window or screen using libobs."
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
name = "libobs_recorder"
path = "src/lib.rs"

[[bin]]
name = "extprocess_recorder"
path = "src/main.rs"

[dependencies]
intprocess-recorder = { workspace = true }
ipc-link = { workspace = true }

[features]
bindgen = ["intprocess-recorder/bindgen"] # re-generates libobs-sys bindings
specta = ["intprocess-recorder/specta"]
