[package]
name = "intprocess-recorder"
version = "0.1.0"
edition = "2021"
authors = ["FX"]
description = "Record a window or screen using libobs."
license = "GPL-2.0"

[dependencies]
libobs-sys = { path = "../libobs-sys" }
serde = { version = "1.0.163", features = ["derive"] }

[features]
debug = []
bindgen = ["libobs-sys/bindgen"]
