[package]
name = "intprocess-recorder"
version = "0.1.0"
edition = "2021"
authors = ["FX"]
description = "Record a window or screen using libobs"
license = "GPL-2.0"

[dependencies]
libobs-sys = { workspace = true }
serde = { workspace = true, features = ["derive"] }
specta = { workspace = true, optional = true }

[features]
disable_logging = []
bindgen = ["libobs-sys/bindgen"]
specta = ["dep:specta"]
