[package]
name = "ipc-link"
version = "0.1.0"
description = "serde/json based protocol for communicating between parent process and intproces-recorder process"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
intprocess-recorder = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
wait-timeout = { workspace = true }
log = { workspace = true }
