[package]
name = "libobs-sys"
version = "0.1.0"
authors = ["FX"]
description = "FFI bindings for libobs"
links = "obs"
build = "build.rs"

[build-dependencies]
bindgen = { workspace = true, optional = true }
build-helper = { workspace = true }

[features]
default = ["bindgen"]
bindgen = ["dep:bindgen"]
