[package]
name = "libobs-sys"
version = "0.1.0"
authors = ["FX"]
description = "FFI bindings for libobs"
links = "obs"
build = "build.rs"

[dependencies]
build-helper = { workspace = true }

[build-dependencies]
bindgen = { workspace = true, optional = true }
build-helper = { workspace = true }

[features]
bindgen = ["dep:bindgen"]
