[package]
name = "libobs-sys"
version = "0.1.0"
description = "FFI bindings for libobs"
build = "build.rs"
links = "obs"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[build-dependencies]
bindgen = { workspace = true, optional = true }
build-helper = { workspace = true }

[features]
bindgen = ["dep:bindgen"]
